syntax = "proto3";

package pb;
option go_package = "./pb";

service Whisperer {
  rpc GetJob(GetJobRequest) returns (GetJobResponse);
  rpc JobResults(JobResultsRequest) returns (JobResultsResponse);
}


///////////////////////////////////////
// GetJob
///////////////////////////////////////
message GetJobRequest {
}
message GetJobResponse {
  string name = 1;
  uint32 resource_id = 2;
  string presigned_url = 3;
  uint32 offset = 4;
  uint32 size = 5;
}

///////////////////////////////////////
// GetJob
///////////////////////////////////////
message JobResultsRequest {
  uint32 resource_id = 1;
  string text = 2;
  bytes raw_output = 3;
  string model = 4;
  string duration = 5;
}
message JobResultsResponse {
}
